# neat

./: :w  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: activation.rs  activations.rs  arena.rs  config.rs  conn.rs  connection.rs  edge.rs  fitness.rs  genes.rs  genome.rs  innov.rs  innovation.rs  lib.rs  node.rs  pop.rs  population.rs  tests.rs
src/genome/: conn.rs  feedforward.rs  mod.rs  node.rs  recurrent.rs
src/node/: accum.rs  bump.rs  conn_input.rs  conn_output.rs  head.rs  hidden.rs  input.rs  leading.rs  mod.rs  output.rs  tail.rs  trailing.rs
src/nodes/: hidden.rs  input.rs  mod.rs  output.rs
src/population/: config.rs  innov.rs  mod.rs  species.rs
tests/: figure2.dot
tests/figure4/: parent.dot  parent1.dot  parent2.dot
