[package]
name = "neat"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.16.0", default-features = false, features = ["allocator_api", "boxed"] }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }

