[package]
name = "neat"
version = "0.1.0"
edition = "2021"
description = "An implementation of NEAT in Rust"
license = "GPLv3"
repository = "https://github.com/victor-scarano/neat"
keywords = ["neat"]

[dependencies]
hashbrown = { version = "0.15.2", features = ["default-hasher"], default-features = false }
rand = { version = "0.9", features = ["alloc", "small_rng"], default-features = false }

# POSSIBLE CATEGORY SLUGS
# algorithms
# no-std
# science
# science::neuroscience
# simulation
# visualization
